--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -14,11 +14,7 @@ latitude: 00.000000
 
 longitude: 00.000000
 
-ssl_cert: /etc/letsencrypt/live/
-
-ssl_key:  /etc/letsencrypt/live/
-
-domain: travus
+domain: travis
 
 google_api: 0000000000000000000000000
 
