--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -18,4 +18,8 @@ domain: travis
 
 google_api: 0000000000000000000000000
 
+ssl_cert: /etc/letsencrypt/live/test.pam
+
+ssl_key:  /etc/letsencrypt/live/test.key
+
 
