--- a/automations.yaml
+++ b/automations.yaml
@@ -1,15 +1,36 @@
-- alias: 'Telegram bot that repeats text'
+- alias: Telegram bot that repeats text
+  id: telegram_test_id
   hide_entity: true
   trigger:
     platform: event
     event_type: telegram_text
   action:
-    - service: telegram_bot.send_message
-      data_template:
-        title: '*Dumb automation*'
-        target: '{{ trigger.event.data.user_id }}'
-        message: 'You said: {{ trigger.event.data.text }}'
-        disable_notification: true
-        inline_keyboard:
-          - "Edit message:/edit_msg, Don't:/do_nothing"
-          - "Remove this button:/remove button"
+  - service: telegram_bot.send_message
+    data_template:
+      title: '*Dumb automation*'
+      target: '{{ trigger.event.data.user_id }}'
+      message: 'You said: {{ trigger.event.data.text }}'
+      disable_notification: true
+      inline_keyboard:
+      - Edit message:/edit_msg, Don't:/do_nothing
+      - Remove this button:/remove button
+
+
+- action:
+  - service: notify.telegram
+  alias: Neue Automatisierung
+  condition: []
+  id: '1523005221157'
+  trigger:
+  - at: '11:10'
+    platform: time
+  action:
+  - service: telegram_bot.send_message
+    data_template:
+      title: '11oclock'
+      message: 'it is time my friend'
+      disable_notification: true
+      inline_keyboard:
+      - Edit message:/edit_msg, Don't:/do_nothing
+      - Remove this button:/remove button
+
