--- a/configuration.yaml
+++ b/configuration.yaml
@@ -113,6 +113,7 @@ device_tracker:
   - platform: owntracks_http
   - platform: nmap_tracker
     hosts: 192.168.178.0/24
+    consider_home: 300
 
 zone:
   - name: ArbeitBianca
