--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -23,3 +23,23 @@ ssl_cert: /etc/letsencrypt/live/test.pam
 ssl_key:  /etc/letsencrypt/live/test.key
 
 
+telegram_apikey: 00000000000000000000000000000000000000000000
+
+chatid_mathias: 0000000000000
+
+calid: 00000000000000000000000000000000000000000000000000000000000
+
+calsec: 000000000000000000000000000000000000000000000000000000000
+
+mqtt_usr: travis
+
+mqtt_pwd: travis
+
+broker_addr: 10.192.172.245
+
+broker_port: 1234
+
+broker_id: travis
+
+ip_range: 172.192.10.0/32
+
